# lumina

./: CMakeLists.txt
icon-theme/lumina-icons/: CMakeLists.txt
src-qt5/: CMakeLists.txt
src-qt5/core/: CMakeLists.txt
src-qt5/core-utils/: CMakeLists.txt
src-qt5/core-utils/lumina-config/: CMakeLists.txt  lumina-config.desktop
src-qt5/core-utils/lumina-config/i18n/: lumina-config_sv.ts  lumina-config_zh_CN.ts
src-qt5/core-utils/lumina-search/: CMakeLists.txt  lumina-search.desktop
src-qt5/core-utils/lumina-search/i18n/: lumina-search_zh_CN.ts
src-qt5/core-utils/lumina-xconfig/: CMakeLists.txt  lumina-xconfig.desktop
src-qt5/core-utils/lumina-xconfig/i18n/: lumina-xconfig_zh_CN.ts
src-qt5/core/libLumina/: LuminaOS-FreeBSD.cpp
src-qt5/core/lumina-desktop/: CMakeLists.txt  Lumina-DE.desktop
src-qt5/core/lumina-desktop-unified/: lumina-desktop-unified.desktop
src-qt5/core/lumina-desktop/i18n/: lumina-desktop_sv.ts  lumina-desktop_zh_CN.ts
src-qt5/core/lumina-desktop/src-screensaver/: CMakeLists.txt
src-qt5/core/lumina-info/: CMakeLists.txt  lumina-info.desktop  lumina-support.desktop
src-qt5/core/lumina-info/i18n/: lumina-info_zh_CN.ts
src-qt5/core/lumina-open/: CMakeLists.txt
src-qt5/core/lumina-open/i18n/: lumina-open_zh_CN.ts
src-qt5/core/lumina-session/: CMakeLists.txt
src-qt5/core/lumina-theme-engine/: CMakeLists.txt
src-qt5/core/lumina-theme-engine/src/lthemeengine/: lthemeengine.desktop
src-qt5/desktop-utils/: CMakeLists.txt
src-qt5/desktop-utils/lumina-archiver/: CMakeLists.txt  lumina-archiver.desktop
src-qt5/desktop-utils/lumina-archiver/i18n/: l-archiver_zh_CN.ts
src-qt5/desktop-utils/lumina-fileinfo/: CMakeLists.txt  lumina-fileinfo.desktop
src-qt5/desktop-utils/lumina-fileinfo/i18n/: l-fileinfo_zh_CN.ts
src-qt5/desktop-utils/lumina-fm/: CMakeLists.txt  lumina-fm.desktop
src-qt5/desktop-utils/lumina-fm/i18n/: lumina-fm_sv.ts  lumina-fm_zh_CN.ts
src-qt5/desktop-utils/lumina-mediaplayer/: CMakeLists.txt  lumina-mediaplayer-pandora.desktop  lumina-mediaplayer.desktop
src-qt5/desktop-utils/lumina-mediaplayer/i18n/: l-mediap_zh_CN.ts
src-qt5/desktop-utils/lumina-photo/: CMakeLists.txt  lumina-photo.desktop
src-qt5/desktop-utils/lumina-photo/i18n/: l-photo_zh_CN.ts
src-qt5/desktop-utils/lumina-screenshot/: CMakeLists.txt  lumina-screenshot.desktop
src-qt5/desktop-utils/lumina-textedit/: CMakeLists.txt  lumina-textedit.desktop
src-qt5/desktop-utils/lumina-textedit/i18n/: l-te_zh_CN.ts
src-qt5/experimental/lumina-screencast/: lumina-screencast.desktop
src-qt5/experimental/lumina-terminal/: lumina-terminal.desktop
